<resources>
    <string name="app_name">Kerjaloka</string>
    <string name="home">Home</string>
    <string name="lamaran">Lamaran</string>
    <string name="interview">Interview</string>
    <string name="akun">Akun</string>
    <string name="content">With the idea of imparting programming
      knowledge, Mr. Sandeep Jain, an IIT Roorkee alumnus started a
      dream, GeeksforGeeks. Whether programming excites you or you feel
      stifled, wondering how to prepare for interview questions or how to
      ace data structures and algorithms, GeeksforGeeks is a one-stop solution.
      With every tick of time, we are adding arrows in our quiver. From articles
      on various computer science subjects to programming problems for practice,
      from basic to premium courses, from technologies to entrance examinations,
      we have been building ample content with superior quality. In a short span,
      we have built a community of 1 Million+ Geeks around the world, 20,000+
      Contributors and 500+ Campus Ambassadors in various colleges across the nation.
      Our success stories include a lot of students who benefitted in their placements </string>
    <string name="header">Halo</string>
    <string name="header_sub">Raih Mimpimu Bersama Kami!</string>
    <string name="search_placeholder">Cari Kerja atau Perusahaan ..</string>
    <string name="find_category">Cari berdasarkan kategori</string>
    <string name="my_test">Test Saya</string>
    <string name="title_test">Tes Seleksi</string>
    <string name="by_company">Oleh:</string>
    <string name="company_name">Cipta Kerja Arunika Nusantara</string>
    <string name="sub_title_test">Dapat dikerjakan sebelum:</string>
    <string name="my_interview">Interview Saya</string>
    <string name="title_job_interview">Enterprise Sales Representative</string>
    <string name="name_of_interviewer">Nama Interviewer:</string>
    <string name="interviewer">John Doe</string>
    <string name="title_activity_search">Search_activity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="result_search">Hasil pencarian kamu:</string>
    <string name="latest_search">Latest Search</string>
    <string name="top_search">Top Search</string>
    <string name="delete_history">Hapus Riwayat</string>
    <string name="recommandation_job">Pekerjaan Rekomendasi</string>
    <string name="lamar_kerja">Lamar Kerjaan</string>
    <string name="requirentments">Requirentments</string>
    <string name="additional_information">Additional Information</string>
    <string name="minimal_pengalaman">Minimal Pengalaman</string>
    <string name="role">Peran</string>
    <string name="job_field">Bidang Pekerjaan</string>
    <string name="detail_pekerjaan">Detail Pekerjaan</string>
    <string name="relate_job_2">Pekerjaan Serupa</string>
    <string name="subtitle_melamar">Kamu akan melamar ke pekerjaan ini, apa kamu yakin untuk melamar pekerjaan ini?</string>
    <string name="title_melamar">Yakin Ingin Melamar?</string>
    <string name="konfimasi">Konfirmasi</string>
    <string name="report">Lapor</string>
    <string name="placeholder_edit_report">Masukkan alasan melakukan report</string>
    <string name="melamar">Melamar</string>
    <string name="report_lowongan_ini">Report lowongan ini:</string>
    <string name="perusahaan_yang_diikuti">Perusahaan yang diikuti</string>
    <string name="cari_perusahaan">Cari Perusahaan</string>
    <string name="see_more">Lihat Selengkapnya</string>
    <string name="want_to_know_company">Perusahaan yang ingin kamu tahu</string>
    <string name="vacancies_company">Perusahaan yang membuka lowongan</string>
    <string name="yang_diikuti">Yang Diikuti</string>
    <string name="browse">Jelajah</string>
    <string name="sedang_merekrut">Sedang Merekrut</string>
    <string name="detail_perusahaan">Detail Perusahaan</string>
    <string name="rating_perusahaan">Rating Perusahaan</string>
    <string name="perusahaan_lainnya">Perusahaan Lainnya</string>
    <string name="pekerjaan_dari_perusahaan_ini">Pekerjaan Dari Perusahaan Ini</string>
    <string name="tentang_perusahaan">Tentang Perusahaan</string>
    <string name="ukuran_perusahaan">Ukuran Perusahaan</string>
    <string name="job">Pekerjaan</string>
    <string name="company">Perusahaan</string>
    <string name="job_offer">Tawaran Kerja</string>
    <string name="see_all">Lihat Semua</string>
    <string name="date_test">30 Dec 2019 pada 05:18</string>
    <string name="timer_text">180 min</string>
    <string name="cari">Cari</string>
    <string name="komentar">Komentar</string>
    <string name="tambah_komentar">Tambah Komentar</string>
    <string name="subtitle_komentar">Komentar yang diberikan hanya dapat dilihat oleh perusahaan kamu saja.</string>
    <string name="send_comment">Kirim</string>
</resources>