<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_apply_job_modal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="40dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        app:cardCornerRadius="100dp"
        app:cardElevation="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/melamar"
        android:textAlignment="center"
        android:textColor="@color/dark_100"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="16dp"
        android:background="@color/light_500" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:src="@drawable/ic_apply_job"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/title_melamar"
        android:textAlignment="center"
        android:textColor="@color/dark_100"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="200dp"
        android:fontFamily="@font/poppins"
        android:text="@string/subtitle_melamar"
        android:textAlignment="center"
        android:textColor="@color/dark_100"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="20dp"
        android:background="@color/light_500" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/danger_500"
        android:fontFamily="@font/poppins"
        android:text="@string/konfimasi"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:cornerRadius="100dp" />
</LinearLayout>