<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/my_test"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_see_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/see_all"
                android:textColor="@color/danger_500"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="10dp"
            app:strokeColor="@color/trueGray_50"
            app:strokeWidth="1dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/title_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/title_test"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:paddingEnd="6dp"
                        android:text="@string/by_company"
                        android:textColor="@color/trueGray_50"
                        android:textSize="10sp"
                        tools:ignore="RtlSymmetry,SmallSp" />

                    <TextView
                        android:id="@+id/company_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/company_name"
                        android:textColor="@color/trueGray_50"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:paddingEnd="6dp"
                        android:text="@string/sub_title_test"
                        android:textColor="@color/trueGray_50"
                        android:textSize="10sp"
                        tools:ignore="RtlSymmetry,SmallSp" />

                    <TextView
                        android:id="@+id/date_test"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/date_test"
                        android:textColor="@color/trueGray_50"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_timer" />

                    <TextView
                        android:id="@+id/duration_test"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/poppins"
                        android:paddingTop="4dp"
                        android:text="@string/timer_text"
                        android:textAlignment="center"
                        android:textColor="@color/dark_100"
                        android:textSize="12sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_test_outlined" />

                    <TextView
                        android:id="@+id/question_test"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/poppins"
                        android:paddingTop="4dp"
                        android:text="10 Pertanyaan"
                        android:textAlignment="center"
                        android:textColor="@color/dark_100"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</LinearLayout>