<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewmodel.Company.CompanyApplicant.ApplicantDetail.SectionKomentar.KomentarApplicantFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="5dp">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_comment"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:contentDescription="@string/cari"
                    android:focusable="true"
                    android:src="@drawable/ic_arrow_left_red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/komentar"
                    android:textAlignment="center"
                    android:textColor="@color/dark_100"
                    android:textSize="16sp" />
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins"
                android:text="@string/tambah_komentar"
                android:textColor="@color/dark_100"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/subtitle_komentar"
                android:textColor="@color/dark_100"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"

                android:backgroundTint="@color/light_500"
                android:clickable="false"
                android:elevation="0dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <EditText
                    android:id="@+id/et_Report_job"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="top|start"
                    android:hint="@string/placeholder_edit_report"
                    android:inputType="textMultiLine|text"
                    android:lines="10"
                    android:maxLines="10"
                    android:padding="10dp"
                    android:textSize="10sp"
                    tools:ignore="Autofill,SmallSp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_send_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="50dp"
                app:strokeColor="@color/danger_500"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/send_comment"
                        android:textAlignment="center"
                        android:textColor="@color/danger_500"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_comment_applicant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_card_comment"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>