<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_apply_job_modal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="40dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="100dp"
            app:cardElevation="0dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/report"
            android:textAlignment="center"
            android:textColor="@color/dark_100"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="16dp"
            android:background="@color/light_500" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/report_lowongan_ini"
            android:textColor="@color/dark_100"
            android:textSize="14sp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/light_500"
            android:clickable="false"
            android:elevation="0dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/et_Report_job"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/placeholder_edit_report"
                android:inputType="textMultiLine|text"
                android:lines="10"
                android:maxLines="10"
                android:padding="10dp"
                android:textSize="10sp"
                tools:ignore="Autofill,SmallSp" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:background="@color/light_500" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/danger_500"
            android:fontFamily="@font/poppins"
            android:text="@string/konfimasi"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:cornerRadius="100dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>